backend - Переход на Spring Boot 3